[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["Benjamin Gonzales <benjamin@gnbit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "problems"
path = "src/lib.rs"

[[bench]]
name = "problems"
path = "src/lib.rs"
harness = false


[dependencies]
